--- a/pages/page.module.scss
+++ b/pages/page.module.scss
@@ -4,6 +4,8 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+
+    overflow: hidden;
   
     .card{
       max-width: 40%;
