--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -8,12 +8,12 @@
 @import 'utils/typography.module.scss';
 @import 'utils/grid.module.scss';
 
- // Components
+// Components
 @import 'components/button.module.scss';
 @import 'components/form.module.scss';
 @import 'components/input.module.scss';
 @import 'components/card.module.scss';
 
- // Page
-//  @import 'pages/page.module.scss';
+// Page
+@import 'pages/register.module.scss';
 
