--- a/public/scss/utils/global.module.scss
+++ b/public/scss/utils/global.module.scss
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Montserrat','Poppins', sans-serif;
 }
 a{
     text-decoration: none;
