Dev: added header components

--- a/public/scss/components/input.module.scss
+++ b/public/scss/components/input.module.scss
@@ -30,7 +30,7 @@
             font-weight: 500;
         }
         &.error {
-            border: 2px solid $error;
+            border: 2px solid $warning;
           }
       
         &.success {
