--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -18,7 +18,9 @@
 @import 'components/form.module.scss';
 @import 'components/input.module.scss';
 @import 'components/card.module.scss';
+@import 'components/header.module.scss';
 
 // Page
 @import 'pages/register.module.scss';
+
 
