--- a/public/scss/utils/colors.module.scss
+++ b/public/scss/utils/colors.module.scss
@@ -5,5 +5,6 @@ $white: #FFFFFF;
 $ivory: #F7F7F9;
 $brown: #48301A;
 $ivory-blur: rgba(255, 255, 255, 0.8);
-$error: #CC0E69;
+$warning: #CC0E69;
 $success: #0071f9;
+$pink: #f899beb3
