Feat: added initialModal

--- a/public/scss/pages/register.module.scss
+++ b/public/scss/pages/register.module.scss
@@ -1,4 +1,6 @@
-.icon-eye {
+
+.register{
+  .icon-eye {
   svg{
     color: $gray; 
     cursor: pointer;
@@ -46,3 +48,5 @@
       }
     }
 } 
+
+}
