--- a/public/scss/utils/colors.module.scss
+++ b/public/scss/utils/colors.module.scss
@@ -7,4 +7,8 @@ $brown: #48301A;
 $ivory-blur: rgba(255, 255, 255, 0.8);
 $warning: #CC0E69;
 $success: #0071f9;
-$pink: #f899beb3
+$pink: #f899beb3;
+$dark-pink: #5C0334;
+$light-pink: #FFF5FB;
+$green: #005B57;
+$blue: #6CADFF;
