--- a/public/scss/utils/grid.module.scss
+++ b/public/scss/utils/grid.module.scss
@@ -10,6 +10,21 @@
 .ml-10{
     margin-left: 10px;
 }
+.mr-20{
+    margin-right: 20px;
+}
+.ml-20{
+    margin-left: 20px;
+}
+.mb-20{
+    margin-bottom: 20px;
+}
+.mt-20{
+    margin-top: 20px;
+}
 .top-10{
     top: 10%;
+}
+.w-100{
+    width: 100%;
 }
