Dev: added selectItem comp and exit button moved to header

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -19,6 +19,8 @@
 @import 'components/input.module.scss';
 @import 'components/card.module.scss';
 @import 'components/header.module.scss';
+@import 'components/selectedItem.module.scss';
+@import 'components/checkbox.module.scss';
 
 // Sections
 @import 'sections/auth-form.module.scss';
