--- a/public/scss/components/header.module.scss
+++ b/public/scss/components/header.module.scss
@@ -3,22 +3,41 @@
     color: $ivory;
 
     border-radius: 0 0 20px 20px;
-    box-shadow: 0px 2px 4px #ef773457; 
-
-
-    padding: 15px 25px;
+    padding: 0 2.5rem;
   
-      .logo{
-        width: 50px;
-        height: 50px;
-      }
-
-      .icon{
-        color: $ivory;
-        font-size: 30px;
-        margin: 0 15px;
-        &:hover{
-            color: $primary-color;
+    .logo{
+      background: $pink;
+      padding: 10px;
+      border-radius: 20px;
+        img{
+          width: 50px;
+          height: 50px;
         }
+    }
+
+    .icon{
+      color: $ivory;
+      font-size: 30px;
+      margin: 0 15px;
+      &:hover, &.active {
+          color: $primary-color;
       }
+    }
+
+    .user-editor{
+      position: absolute;
+      right: 48px;
+      top: 73px;
+
+      background: $pink;
+      border-radius:20px;
+        button{
+          text-align: center;
+          padding: 10px 25px;
+          &:hover{
+            background: $primary-color;
+            border-radius: 20px;
+          }
+        }
+    }
   }
