--- a/public/scss/components/header.module.scss
+++ b/public/scss/components/header.module.scss
@@ -32,6 +32,7 @@
       background: $pink;
       border-radius:20px;
         button{
+          width: 100%;
           text-align: center;
           padding: 10px 25px;
           &:hover{
