Dev: added navbar and changed user-editor

--- a/public/scss/components/header.module.scss
+++ b/public/scss/components/header.module.scss
@@ -18,7 +18,7 @@
     .icon{
       color: $ivory;
       font-size: 30px;
-      margin: 0 15px;
+      margin-right: 15px;
       &:hover, &.active {
           color: $primary-color;
       }
