Dev: added banner comp and changed styles banner

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -25,6 +25,7 @@
 @import 'components/header.module.scss';
 @import 'components/selectedItem.module.scss';
 @import 'components/checkbox.module.scss';
+@import 'components/banner.module.scss';
 
 // Sections
 @import 'sections/auth-form.module.scss';
