--- a/public/scss/utils/typography.module.scss
+++ b/public/scss/utils/typography.module.scss
@@ -1,16 +1,17 @@
 .title{
-    font-size: 64px;
+    font-size: 32px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     @media (max-width: 767px) {
-        font-size: 35px;
-        margin-bottom: 25px;
+        font-size: 22px;
+        margin-bottom: 10px;
     }
 }
 .desc{
-    font-size: 18px;
+    color: $gray;
+    font-size: 20px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -19,7 +20,7 @@
 
 .label{
     color: $gray;
-    font-size: 16px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 400;
     margin: 0;
