Fix: control for new day dailylist

--- a/pages/page.module.scss
+++ b/pages/page.module.scss
@@ -16,7 +16,7 @@
   
     aside{
       display: flex;
-      justify-content: flex-end;
+      justify-content: right;
   
       height: 100vh;
   
