--- a/public/scss/sections/initialModal.module.scss
+++ b/public/scss/sections/initialModal.module.scss
@@ -10,7 +10,7 @@
     }
     .docButton{
         display: flex;
-        justify-content: flex-end;
+        justify-content: right;
         margin-bottom: 60px;
     }
     .submitButton{
