--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -28,7 +28,7 @@
 @import 'components/banner.module.scss';
 
 // Sections
-@import 'sections/auth-form.module.scss';
+@import 'sections/authForm.module.scss';
 @import 'sections/initialModal.module.scss';
 
 
